@@ -164,8 +164,9 @@ EPIX10KA    = 29
 UXI         = 30
 PIXIS       = 31
 EPIX10KA2M  = 32
-STREAK      = 33
-ARCHON      = 34
+EPIX10KAQUAD= 33
+STREAK      = 34
+ARCHON      = 35
 
 #XAMPS    # N/A data
 #FEXAMP   # N/A data
@@ -175,10 +176,11 @@ ARCHON      = 34
 #GOTTHARD # N/A data
 """ Enumetated detector types"""
 
-list_of_det_type = (UNDEFINED, CSPAD, CSPAD2X2, PRINCETON, PNCCD, TM6740, \
-                    OPAL1000, OPAL2000, OPAL4000, OPAL8000, \
-                    ORCAFL40, EPIX, EPIX10K, EPIX100A, FCCD960, ANDOR, ACQIRIS, IMP, QUARTZ4A150, RAYONIX,
-                    EVR, FCCD, TIMEPIX, FLI, PIMAX, ANDOR3D, JUNGFRAU, ZYLA, EPICSCAM, EPIX10KA, UXI, PIXIS, EPIX10KA2M, STREAK, ARCHON)
+list_of_det_type = (UNDEFINED, CSPAD, CSPAD2X2, PRINCETON, PNCCD, TM6740,\
+                    OPAL1000, OPAL2000, OPAL4000, OPAL8000,\
+                    ORCAFL40, EPIX, EPIX10K, EPIX100A, FCCD960, ANDOR, ACQIRIS, IMP, QUARTZ4A150, RAYONIX,\
+                    EVR, FCCD, TIMEPIX, FLI, PIMAX, ANDOR3D, JUNGFRAU, ZYLA, EPICSCAM, EPIX10KA, UXI, PIXIS,\
+                    EPIX10KA2M, EPIX10KAQUAD, STREAK, ARCHON)
 
 """ List of enumetated detector types"""
 
@@ -186,7 +188,7 @@ list_of_det_names = ('UNDEFINED', 'Cspad', 'Cspad2x2', 'Princeton', 'pnCCD', 'Tm
                      'Opal1000', 'Opal2000', 'Opal4000', 'Opal8000', \
                      'OrcaFl40', 'Epix', 'Epix10k', 'Epix100a', 'Fccd960', 'Andor', 'Acqiris', 'Imp', 'Quartz4A150', 'Rayonix',\
                      'Evr', 'Fccd', 'Timepix', 'Fli', 'Pimax', 'Andor3d', 'Jungfrau', 'Zyla', 'ControlsCamera', 'Epix10ka',\
-                     'Uxi', 'Pixis', 'Epix10ka2M', 'Streak', 'Archon')
+                     'Uxi', 'Pixis', 'Epix10ka2M', 'Epix10kaQuad', 'Streak', 'Archon')
 
 """ List of enumetated detector names"""
 
@@ -223,6 +225,7 @@ list_of_calib_groups = ('UNDEFINED',
                         'Uxi::CalibV1',
                         'Pixis::CalibV1',
                         'Epix10ka2M::CalibV1',
+                        'Epix10kaQuad::CalibV1',
                         'Camera::CalibV1',
                         'Camera::CalibV1',
                         )
@@ -337,6 +340,7 @@ def det_type_from_source(source) :
     elif ':Uxi.'            in str_src : return UXI
     elif ':Pixis.'          in str_src : return PIXIS
     elif ':Epix10ka2M.'     in str_src : return EPIX10KA2M
+    elif ':Epix10kaQuad.'   in str_src : return EPIX10KAQUAD
     elif ':StreakC7700.'    in str_src : return STREAK
     elif ':Archon.'         in str_src : return ARCHON
     else                               : return UNDEFINED
